        result, the situations in which a sequence number is appended to a 
        name are now the same for atomic vectors and lists.  For example, 
        \code{unlist(list(x=list(2,a=3)))} and \code{unlist(list(x=c(2,a=3)))}
        now return the same result (in which the name for the first element 
        is \code{x}, not \code{x1}).
  \item The \code{inhibit_release} argument to the \code{gctorture2} function,
        and the \code{R_GCTORTURE_INHIBIT_RELEASE} environment variable,
        can now (as earlier, and in R Core versions of R) be used to prevent 
        freed objects from being reused.
  \item The \code{cumsum} and \code{cumprod} functions now correctly propagate 
        \code{NaN} and \code{NA} values that are encountered to all later
        values, with \code{NA} taking precedence over \code{NaN}.  Previously,
        \code{NaN} had been converted to \code{NA} in \code{cumsum}.  (In
        R-3.4.1, the behaviour in this respect appears to be platform 
        dependent.)
  \item Indexes used with \code{[[} can be symbols, with effect equivalent 
        to indexing with the symbol's print name.  This has actually been
        true since pqR-2013-07-22, but wasn't documented.
  \item When applied to complex vectors, the \code{prod} and \code{cumprod}
        functions now produce results matching those obtained with the
        \code{*} operator.
  \item The old serialization format, used prior to December 2001, is 
        no longer supported in pqR.  Code to support it would need to
        be changed to accomodate recent changes in pqR, and meaningful
        testing of such changes seems like it would require excessive
        efforts.
  \item It is now allowed to set the length of an ``expression''
        object with \code{length(e)<-len}, as for other vector
        types.  Any extra elements are set to \code{NULL}.
  \item Attempts to set attributes on a symbol are now silently ignored,