@@ -185,6 +185,9 @@
         \code{unlist(list(x=list(2,a=3)))} and \code{unlist(list(x=c(2,a=3)))}
         now return the same result (in which the name for the first element 
         is \code{x}, not \code{x1}).
+  \item The \code{\%\%} operator can no longer produce a warning of
+        "probable complete loss of accuracy in modulus", the possiblity
+        of which had prevented it being done in parallel in a helper thread.
   \item The \code{inhibit_release} argument to the \code{gctorture2} function,
         and the \code{R_GCTORTURE_INHIBIT_RELEASE} environment variable,
         can now (as earlier, and in R Core versions of R) be used to prevent 
